--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.thymeleaf.cache=false
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
