--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
+
+logging.level.tacos=DEBUG
+
+taco.orders.pageSize=10
